A little optimization of custom effect information